MH-4236, MH-4311: implemented sorting for tablecolumns in AdminProxy, sorting parameters are now kept across all filters, page size is kept acrosss filters
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7917 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -316,19 +316,19 @@ select { font-size:1.15em; }
 
 .sortable {
   cursor:pointer;
-  background-image:url(../shared_img/icons/bg.gif);
+  /*background-image:url(../shared_img/icons/bg.gif);*/
   background-position: center right;
   background-repeat:no-repeat;
 }
 
-.sortable-asc {
+.sortable-Ascending {
   cursor:pointer;
   background-image:url(../shared_img/icons/asc.gif);
   background-position: center right;
   background-repeat:no-repeat;
 }
 
-.sortable-desc {
+.sortable-Descending {
   cursor:pointer;
   background-image:url(../shared_img/icons/desc.gif);
   background-position: center right;
